fix: :bug: correct secondary button contrast

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  @apply bg-neutral-100;
+  @apply bg-gray-50;
 }
 
 h1 {
